Fixed logo position and proportions on mobile

--- a/src/game/play.css
+++ b/src/game/play.css
@@ -135,7 +135,7 @@
 }
 
 .instructions {
-  padding: 20px 20px 0;
+  padding: 0 env(safe-area-inset-left) 0;
   display: grid;
   gap: 3em;
 }
